--- a/portfolio.html
+++ b/portfolio.html
@@ -71,7 +71,14 @@
             <ul class="list project-list">
                 <li class="project-item">
                     <article class="card" >
-                        <div class="card-thumb"><img src="./image/tehnokryak.jpg" alt="картинка-персонала" width="370" height="294"></div>
+                        <div class="card-thumb">
+                            <img src="./image/tehnokryak.jpg" alt="картинка-персонала" width="370" height="294">
+                            <div class="card-action">
+                                <p class="card-action-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            
+                        </div>
                         <div class="title-conteiner">
                             <h3 class="list-title">Технокряк</h3>
                             <p class="list-work">Веб-сайт</p>
@@ -80,7 +87,14 @@
                 </li>
                 <li class="project-item">
                     <article class="card" >
-                        <div class="card-thumb"><img src="./image/new-orlean.jpg" alt="картинка-баскетболистов" width="370" height="294"></div>
+                        <div class="card-thumb">
+                            <img src="./image/new-orlean.jpg" alt="картинка-баскетболистов" width="370" height="294">
+                            <div class="card-action">
+                                <p class="card-action-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="title-conteiner">
                             <h3 class="list-title">Постер <span lang="en">Orlean vs Golden Star</span> </h3>
                             <p class="list-work">Дизайн</p>
@@ -89,7 +103,14 @@
                 </li>
                 <li class="project-item">
                     <article class="card" >
-                        <div class="card-thumb"><img src="./image/seafood.jpg" alt="картинка-ретсорана" width="370" height="294"></div>
+                        <div class="card-thumb">
+                            <img src="./image/seafood.jpg" alt="картинка-ретсорана" width="370" height="294">
+                            <div class="card-action">
+                                <p class="card-action-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="title-conteiner">
                             <h3 class="list-title">Ресторан <span lang="en">Seafood</span></h3>
                             <p class="list-work">Приложение</p>
@@ -98,7 +119,14 @@
                 </li>
                 <li class="project-item">
                     <article class="card">
-                        <div class="card-thumb"><img src="./image/prime.jpg" alt="картинка-наушники" width="370" height="294"></div>
+                        <div class="card-thumb">
+                            <img src="./image/prime.jpg" alt="картинка-наушники" width="370" height="294">
+                            <div class="card-action">
+                                <p class="card-action-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="title-conteiner">
                             <h3 class="list-title">Проект <span lang="en">Prime</span></h3>
                             <p class="list-work">Маркетинг</p>
@@ -107,7 +135,14 @@
                 </li>
                 <li class="project-item">
                     <article class="card">
-                        <div class="card-thumb"><img src="./image/boxes.jpg" alt="картинка-каробки" width="370" height="294"></div>
+                        <div class="card-thumb">
+                            <img src="./image/boxes.jpg" alt="картинка-каробки" width="370" height="294">
+                            <div class="card-action">
+                                <p class="card-action-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="title-conteiner">
                             <h3 class="list-title">Проект <span lang="en">Boxes</span></h3>
                             <p class="list-work">Приложение</p>
@@ -116,7 +151,14 @@
                 </li>
                 <li class="project-item">
                     <article class="card">
-                        <div class="card-thumb"><img src="./image/inspiration.jpg" alt="картинка-ноутбука" width="370" height="294"></div>
+                        <div class="card-thumb">
+                            <img src="./image/inspiration.jpg" alt="картинка-ноутбука" width="370" height="294">
+                            <div class="card-action">
+                                <p class="card-action-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="title-conteiner">
                             <h3 class="list-title"><span lang="en">Inspiration has no Borders</span></h3>
                             <p class="list-work">Веб-сайт</p>
@@ -125,7 +167,14 @@
                 </li>
                 <li class="project-item">
                     <article class="card" >
-                        <div class="card-thumb"><img src="./image/limited-ed.jpg" alt="картинка-журнала" width="370" height="294"></div>
+                        <div class="card-thumb">
+                            <img src="./image/limited-ed.jpg" alt="картинка-журнала" width="370" height="294">
+                            <div class="card-action">
+                                <p class="card-action-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="title-conteiner">
                             <h3 class="list-title">Издание <span lang="en">Limited Edition</span></h3>
                             <p class="list-work">Дизайн</p>
@@ -134,7 +183,14 @@
                 </li>
                 <li class="project-item">
                     <article class="card" >
-                        <div class="card-thumb"><img src="./image/lab.jpg" alt="картинка-бирка-на-веревке" width="370" height="294"></div>
+                        <div class="card-thumb">
+                            <img src="./image/lab.jpg" alt="картинка-бирка-на-веревке" width="370" height="294">
+                            <div class="card-action">
+                                <p class="card-action-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="title-conteiner">
                             <h3 class="list-title">Проект <span lang="en">LAB</span></h3>
                             <p class="list-work">Маркетинг</p>
@@ -143,7 +199,14 @@
                 </li>
                 <li class="project-item">
                     <article class="card" >
-                        <div class="card-thumb"><img src="./image/business.jpg" alt="картинка-бизнесмена-за-ноутбуком" width="370" height="294"></div>
+                        <div class="card-thumb">
+                            <img src="./image/business.jpg" alt="картинка-бизнесмена-за-ноутбуком" width="370" height="294">
+                            <div class="card-action">
+                                <p class="card-action-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                        </div>
                         <div class="title-conteiner">
                             <h3 class="list-title"><span lang="en">Growing Business</span></h3>
                             <p class="list-work">Приложение</p>
