--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
                 <a href="" class="logo"><span class="accent">Web</span>Studio</a>
                 <ul class="list links-nav">
                     <li class="item"><a href="./index.html" class="link">Студия</a></li>
-                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a> </li>
+                    <li class="item"><a href="./portfolio.html" class="link сurrent-page">Портфолио</a> </li>
                     <li class="item"><a href="" class="link">Контакты</a> </li>
                 </ul>
             </nav>
