--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/modern-normalize.css">    
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
-<body >
+<body class="body">
     <!-- Heder -->
     <header class="page-header">
         <div class="container page-nav">
